--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "vite": "^7.2.4"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.2",
     "@supabase/supabase-js": "^2.90.0",
     "@tanstack/react-query": "^5.90.16",
