--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@supabase/supabase-js": "^2.90.0",
     "@tanstack/react-query": "^5.90.16",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.562.0",
     "react-hook-form": "^7.70.0",
     "react-router-dom": "^7.11.0",
